fix: EXUI-790	unit test now working; EXUI-996- Fixed dateTime Picker; Fix issue probate buttons - cancel and continue button

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/datetime-picker/datetime-picker.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/datetime-picker/datetime-picker.component.html
@@ -41,6 +41,9 @@
                                (monthSelected)="monthSelected($event)"
                                (opened)="toggleClick()"
       >
+        <ngx-mat-datepicker-actions>
+          <button mat-raised-button color="primary" ngxMatDatepickerApply>Confirm</button>
+        </ngx-mat-datepicker-actions>
       </ngx-mat-datetime-picker>
     </div>
   </fieldset>
