--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.html
@@ -13,8 +13,8 @@
   <div class="document-folders-header__title">Documents ({{ documentCount }})</div>
   <div>
     <ccd-case-file-view-folder-sort
-      (sortAscending)="sortDataSourceAscending($event)"
-      (sortDescending)="sortDataSourceDescending($event)"
+      (sortAscending)="sortDataSourceAscAlphabetically()"
+      (sortDescending)="sortDataSourceDescAlphabetically()"
     ></ccd-case-file-view-folder-sort>
   </div>
 </div>
@@ -32,11 +32,7 @@
           <div class="node__icon" disabled>
             <img src="/assets/img/case-file-view/case-file-view-document.svg" class="node__iconImg" alt="Document icon">
           </div>
-          <span class="node__name node-name-document">
-            {{node.name}}
-            <br>
-            <span class="node__document-upload-timestamp">{{node.upload_timestamp}}</span>
-          </span>
+          <span class="node__name node-name-document">{{node.name}}</span>
           <div class="node__document-options">
             <ccd-case-file-view-folder-document-actions
               (changeFolderAction)="triggerDocumentAction('changeFolder', node)"
