EUI-8999: Case Flags v2.1 fixes
Restrict display of the comments visibility warning text to flags not of type "Other (internal)" for the "Create Case Flag" journey, and flags that were previously created as external for the "Manage Case Flags" journey.

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/update-flag/update-flag.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/update-flag/update-flag.component.html
@@ -26,7 +26,7 @@
                 : (updateFlagStepEnum.COMMENT_HINT_TEXT_INTERNAL_2_POINT_1 | rpxTranslate)
             }}
           </div>
-          <div class="govuk-warning-text" *ngIf="internalUser2Point1EnabledUpdate">
+          <div class="govuk-warning-text" *ngIf="internalUser2Point1EnabledUpdate && externallyVisibleFlag">
             <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
             <strong class="govuk-warning-text__text">
               <span class="govuk-warning-text__assistive">{{'Warning' | rpxTranslate}}</span>
