--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/add-comments/add-comments.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/add-comments/add-comments.component.html
@@ -8,7 +8,8 @@
       <div id="add-comments-hint" class="govuk-hint">
         {{addCommentsHint | rpxTranslate}}
       </div>
-      <div class="govuk-warning-text" *ngIf="!isDisplayContextParameterExternal && isDisplayContextParameter2Point1Enabled">
+      <div class="govuk-warning-text"
+        *ngIf="!isDisplayContextParameterExternal && isDisplayContextParameter2Point1Enabled && !otherInternalFlagTypeSelected">
         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
         <strong class="govuk-warning-text__text">
           <span class="govuk-warning-text__assistive">{{'Warning' | rpxTranslate}}</span>
