exui-997-pass metadatafield evaluate show condition (#1610)
* exui-997-pass metadatafield evaluate show conditio

* added unit test

* fixed failed unit tests

* passing formfields along with metadata fields

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-edit-submit/case-edit-submit.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-edit-submit/case-edit-submit.html
@@ -28,7 +28,7 @@
           <ng-container *ngIf="isShown(page)">
             <ng-container *ngFor="let field of page
             | ccdPageFields: editForm
-            | ccdReadFieldsFilter: false :undefined :true : editForm.controls['data']
+            | ccdReadFieldsFilter: false :undefined :true :allFieldsValues
             | ccdCYAPageLabelFilter">
               <ng-container *ngIf="canShowFieldInCYA(field)">
                 <tr ccdLabelSubstitutor [caseField]="field" [hidden]="field.hidden"
