--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/update-flag/update-flag.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/update-flag/update-flag.component.html
@@ -12,7 +12,11 @@
 
       <div class="govuk-!-margin-bottom-4">
         <label class="govuk-label govuk-label--s" [for]="caseFlagFormFields.COMMENTS">
-          {{updateFlagTitle | rpxTranslate}} {{'comments' | rpxTranslate}}
+          {{
+            externalUserUpdate
+              ? (updateFlagStepEnum.COMMENT_FIELD_LABEL_EXTERNAL | rpxTranslate)
+              : (updateFlagTitle | rpxTranslate) + (' comments' | rpxTranslate)
+          }}
         </label>
         <div id="update-flag-comments-hint-external" class="govuk-hint" *ngIf="externalUserUpdate">
           {{updateFlagStepEnum.COMMENT_HINT_TEXT_EXTERNAL | rpxTranslate}}
