EUI-9035: Case Flags v2 fix - Ensure Case Flag Summary (CYA) page displays flag update comments
Fix bug where Case Flag Summary (CYA) page displays original flag comments instead of flag update comments, during the "Manage support" journey for an external user. Also amend Case Flags page to display flag update comments for "Inactive" flags.

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/case-flag-summary-list/case-flag-summary-list.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/case-flag-summary-list/case-flag-summary-list.component.html
@@ -46,7 +46,7 @@
       {{'Comments' | rpxTranslate}}
     </dt>
     <dd class="govuk-summary-list__value">
-      {{flagComments}}
+      {{externalUserUpdate ? flagUpdateComments : flagComments}}
     </dd>
     <dd class="govuk-summary-list__actions">
       <a class="govuk-link" href="javascript:void(0)"
