--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/case-flag-table/case-flag-table.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/case-flag-table/case-flag-table.component.html
@@ -23,8 +23,10 @@
       </td>
       <td class="govuk-table__cell">
         <div>{{flagDetail | flagFieldDisplay:'flagComment'}}</div>
-        <div *ngIf="!caseFlagsExternalUser && flagDetail.status === caseFlagStatus.NOT_APPROVED && flagDetail.flagUpdateComment">
-          <span class="govuk-!-font-weight-bold">Decision Reason: {{flagDetail.flagUpdateComment}}</span>
+        <div *ngIf="!caseFlagsExternalUser &&
+          (flagDetail.status === caseFlagStatus.NOT_APPROVED || flagDetail.status === caseFlagStatus.INACTIVE) &&
+          flagDetail.flagUpdateComment">
+          <span class="govuk-!-font-weight-bold">Update Reason: {{flagDetail.flagUpdateComment}}</span>
         </div>
       </td>
       <td class="govuk-table__cell">{{flagDetail.dateTimeCreated | date: 'dd LLL yyyy'}}</td>
