--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/fixed-radio-list/write-fixed-radio-list-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/fixed-radio-list/write-fixed-radio-list-field.html
@@ -2,7 +2,7 @@
   <fieldset>
     <legend>
       <label [for]="id()">
-        <span class="form-label" *ngIf="caseField.label">{{(caseField | ccdFieldLabel) | rpxTranslate}}</span>
+        <span class="form-label" *ngIf="caseField.label">{{(caseField | ccdFieldLabel)}}</span>
       </label>
       <span class="form-hint" *ngIf="caseField.hint_text">{{caseField.hint_text | rpxTranslate }}</span>
       <span class="error-message" *ngIf="fixedRadioListControl.errors && (fixedRadioListControl.dirty || fixedRadioListControl.touched)">{{(fixedRadioListControl.errors | ccdFirstError:caseField.label)}}</span>
