--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-link/write-case-link-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-link/write-case-link-field.html
@@ -1,6 +1,6 @@
 <div class="form-group" [ngClass]="{'form-group-error': !caseReferenceControl.valid && (caseReferenceControl.dirty || caseReferenceControl.touched)}">
   <label [for]="id()">
-    <span class="form-label" *ngIf="caseField.label">{{caseField | ccdFieldLabel | rpxTranslate}}</span>
+    <span class="form-label" *ngIf="caseField.label">{{caseField | ccdFieldLabel}}</span>
   </label>
   <span class="form-hint" *ngIf="caseField.hint_text">{{caseField.hint_text | rpxTranslate}}</span>
   <span class="error-message" *ngIf="caseReferenceControl.errors && (caseReferenceControl.dirty || caseReferenceControl.touched)">
