--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/collection/write-collection-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/collection/write-collection-field.html
@@ -3,7 +3,7 @@
   <div class="panel collection-indicator">
 
     <h2 class="heading-h2 error-spacing">
-      {{(caseField | ccdFieldLabel) | rpxTranslate }}
+      {{(caseField | ccdFieldLabel)}}
     </h2>
     <button class="button write-collection-add-item__top" type="button" (click)="addItem(true)" [disabled]="isNotAuthorisedToCreate() || isSearchFilter()">{{'Add new' | rpxTranslate}}</button>
     <h2 class="heading-h2 error-spacing" *ngIf="caseField.hint_text || formArray.errors">
