--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/complex/write-complex-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/complex/write-complex-field.html
@@ -1,9 +1,9 @@
 <div class="form-group" [id]="id()">
   <fieldset>
-    <legend><h2 *ngIf="renderLabel" class="heading-h2">{{(caseField | ccdFieldLabel) | rpxTranslate}}</h2></legend>
+    <legend><h2 *ngIf="renderLabel" class="heading-h2">{{(caseField | ccdFieldLabel)}}</h2></legend>
     <ng-container [ngSwitch]="field | ccdIsReadOnly" *ngFor="let field of complexFields">
       <ccd-field-read *ngSwitchCase="true"
-                      ccdLabelSubstitutor
+                      ccdLabelSubstitutorp
                       [caseField]="buildField(field)"
                       [caseFields]="caseFields"
                       [formGroup]="formGroup"
