--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/fixed-list/write-fixed-list-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/fixed-list/write-fixed-list-field.html
@@ -1,7 +1,7 @@
 <div class="form-group" [ngClass]="{'form-group-error': !fixedListFormControl.valid && (fixedListFormControl.dirty || fixedListFormControl.touched)}">
 
   <label [for]="id()">
-    <span class="form-label" *ngIf="caseField.label">{{(caseField | ccdFieldLabel) | rpxTranslate}}</span>
+    <span class="form-label" *ngIf="caseField.label">{{(caseField | ccdFieldLabel)}}</span>
   </label>
   <span class="form-hint" *ngIf="caseField.hint_text">{{caseField.hint_text | rpxTranslate}}</span>
   <span class="error-message" *ngIf="fixedListFormControl.errors && (fixedListFormControl.dirty || fixedListFormControl.touched)">
