--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/money-gbp/write-money-gbp-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/money-gbp/write-money-gbp-field.html
@@ -1,7 +1,7 @@
 <div class="form-group bottom-30" [ngClass]="{'form-group-error': !moneyGbpControl.valid && (moneyGbpControl.dirty || moneyGbpControl.touched)}">
 
   <label [for]="id()">
-    <span class="form-label" *ngIf="caseField.label">{{caseField | ccdFieldLabel | rpxTranslate}}</span>
+    <span class="form-label" *ngIf="caseField.label">{{caseField | ccdFieldLabel}}</span>
   </label>
   <span class="form-hint" *ngIf="caseField.hint_text">{{caseField.hint_text | rpxTranslate}}</span>
   <span class="error-message" *ngIf="moneyGbpControl.errors && (moneyGbpControl.dirty || moneyGbpControl.touched)">{{moneyGbpControl.errors | ccdFirstError:caseField.label}}</span>
