--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/multi-select-list/write-multi-select-list-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/multi-select-list/write-multi-select-list-field.html
@@ -3,7 +3,7 @@
   <fieldset>
 
     <legend>
-      <span class="form-label" *ngIf="caseField.label">{{caseField | ccdFieldLabel | rpxTranslate}}</span>
+      <span class="form-label" *ngIf="caseField.label">{{caseField | ccdFieldLabel}}</span>
     </legend>
     <span *ngIf="caseField.hint_text" class="form-hint">{{caseField.hint_text | rpxTranslate}}</span>
     <span *ngIf="checkboxes.errors && (checkboxes.dirty || checkboxes.touched)" class="error-message">{{checkboxes.errors | ccdFirstError:caseField.label}}</span>
