--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/phone-uk/write-phone-uk-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/phone-uk/write-phone-uk-field.html
@@ -1,6 +1,6 @@
 <div class="form-group" [ngClass]="{'form-group-error': !phoneUkControl.valid && (phoneUkControl.dirty || phoneUkControl.touched)}">
   <label [for]="id()">
-    <span class="form-label" *ngIf="caseField.label">{{caseField | ccdFieldLabel | rpxTranslate}}</span>
+    <span class="form-label" *ngIf="caseField.label">{{caseField | ccdFieldLabel}}</span>
   </label>
   <span class="form-hint" *ngIf="caseField.hint_text">{{caseField.hint_text | rpxTranslate}}</span>
   <span class="error-message" *ngIf="phoneUkControl.errors && (phoneUkControl.dirty || phoneUkControl.touched)">
