--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/text-area/write-text-area-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/text-area/write-text-area-field.html
@@ -1,7 +1,7 @@
 <div class="form-group" [ngClass]="{'form-group-error': !textareaControl.valid && textareaControl.dirty}">
 
   <label [for]="id()">
-    <span class="form-label" *ngIf="caseField.label">{{caseField | ccdFieldLabel | rpxTranslate}}</span>
+    <span class="form-label" *ngIf="caseField.label">{{caseField | ccdFieldLabel}}</span>
   </label>
   <span class="form-hint" *ngIf="caseField.hint_text">{{caseField.hint_text | rpxTranslate}}</span>
   <span class="error-message" *ngIf="textareaControl.errors && (textareaControl.dirty || textareaControl.touched)">
