--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/yes-no/write-yes-no-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/yes-no/write-yes-no-field.html
@@ -1,7 +1,7 @@
 <div [id]="id()" class="form-group bottom-30" [ngClass]="{'form-group-error': !yesNoControl.valid && (yesNoControl.dirty || yesNoControl.touched)}">
 	<fieldset class="inline">
     <legend>
-      <span class="form-label" *ngIf="caseField.label">{{caseField | ccdFieldLabel | rpxTranslate}}</span>
+      <span class="form-label" *ngIf="caseField.label">{{caseField | ccdFieldLabel}}</span>
     </legend>
     <span class="form-hint" *ngIf="caseField.hint_text">{{caseField.hint_text | rpxTranslate}}</span>
     <span class="error-message" *ngIf="yesNoControl.errors && (yesNoControl.dirty || yesNoControl.touched)">
