--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/markdown/markdown.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/markdown/markdown.html
@@ -1,1 +1,1 @@
-<div><markdown class="markdown" [data]="content | ccdCaseReference"></markdown></div>
+<div><markdown class="markdown" [data]="content | ccdCaseReference | rpxTranslate"></markdown></div>
