Convert date/time to local format

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-history/case-history.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-history/case-history.component.html
@@ -12,7 +12,7 @@
           <tbody>
           <tr>
             <th>{{'Date' | rpxTranslate}}</th>
-            <td>{{caseHistory.event.timestamp | ccdDate}}</td>
+            <td>{{caseHistory.event.timestamp | ccdDate : 'local'}}</td>
           </tr>
           <tr>
             <th>{{'Author' | rpxTranslate}}</th>
