--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/address/write-address-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/address/write-address-field.html
@@ -6,17 +6,17 @@
       <label [for]="createElementId('postcodeInput')">
         <span class="form-label">{{'Enter a UK postcode' | rpxTranslate}}</span>
       </label>
-      <span class="error-message" *ngIf="missingPostcode">{{'Enter the Postcode' | rpxTranslate}}</span>
+      <span class="error-message" *ngIf="missingPostcode">{{errorMessage | rpxTranslate}}</span>
       <input type="text" [ngClass]="{'govuk-input--error': missingPostcode}"
       [id]="createElementId('postcodeInput')" name="postcode" class="form-control postcodeinput inline-block" [formControl]="postcode">
       <button type="button" class="button button-30" (click)="findAddress()">{{'Find address' | rpxTranslate}}</button>
     </div>
 
-    <div class="form-group" *ngIf="addressOptions" id="selectAddress">
+    <div class="form-group" *ngIf="addressOptions" id="selectAddress" [ngClass]="{'form-group-error': noAddressSelected}">
       <label [for]="createElementId('addressList')">
         <span class="form-label">{{'Select an address' | rpxTranslate}}</span>
       </label>
-
+      <span class="error-message" *ngIf="noAddressSelected">{{errorMessage | rpxTranslate}}</span>
       <select class="form-control ccd-dropdown addressList" [id]="createElementId('addressList')" name="address" [formControl]="addressList" (change)="addressSelected()" focusElement>
         <option *ngFor="let addressOption of addressOptions" [ngValue]="addressOption.value">
           {{addressOption.description | rpxTranslate}}
