--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-edit-submit/case-edit-submit.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-edit-submit/case-edit-submit.html
@@ -84,17 +84,24 @@
     <ng-container *ngIf="showEventNotes()">
       <fieldset id="fieldset-event" formGroupName="event">
         <legend style="display: none;"></legend>
-        <div class="form-group">
+        <div class="form-group" [ngClass]="{'form-group-error': !!summary && !summary.valid && (summary.dirty || summary.touched)}">
           <label for="field-trigger-summary" class="form-label">
             Event summary (optional)
             <span class="form-hint">A few words describing the purpose of the event.</span>
           </label>
-          <input type="text" id="field-trigger-summary" class="form-control bottom-30 width-50" formControlName="summary" maxlength="1024">
+          <span class="error-message" *ngIf="summary?.errors && (summary.dirty || summary.touched)">
+            {{summary.errors | ccdFirstError: eventSummaryLabel | rpxTranslate}}
+          </span>
+          <input type="text" id="field-trigger-summary" class="form-control bottom-30 width-50"
+            [ngClass]="{'govuk-input--error': summary?.errors && (summary.dirty || summary.touched)}" formControlName="summary" maxlength="1024">
         </div>
-        <div class="form-group">
+        <div class="form-group" [ngClass]="{'form-group-error': !!description && !description.valid && (description.dirty || description.touched)}">
           <label for="field-trigger-description" class="form-label">Event description (optional)</label>
+          <span class="error-message" *ngIf="description?.errors && (description.dirty || description.touched)">
+            {{description.errors | ccdFirstError: eventDescriptionLabel | rpxTranslate}}
+          </span>
           <textarea id="field-trigger-description" class="form-control bottom-30 width-50" formControlName="description"
-                    maxlength="65536"></textarea>
+            [ngClass]="{'govuk-input--error': description?.errors && (description.dirty || description.touched)}" maxlength="65536"></textarea>
         </div>
       </fieldset>
     </ng-container>
