--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-edit-form/case-edit-form.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-edit-form/case-edit-form.html
@@ -1,7 +1,7 @@
 <ng-container ccdConditionalShowForm [formGroup]="formGroup" [caseFields]="fields" [contextFields]="caseFields"
               *ngFor="let field of fields">
 
-  <div ccdLabelSubstitutor [caseField]="field" [formGroup]="formGroup" [contextFields]="caseFields">
+  <div ccdLabelSubstitutor [caseField]="field" [formGroup]="formGroup" [contextFields]="caseFields" [eventTrigger]="eventTrigger" [triggeredFromEvent]="true">
     <ng-container [ngSwitch]="field | ccdIsReadOnlyAndNotCollection">
 
       <ccd-field-read *ngSwitchCase="true" [caseField]="field" [caseFields]="caseFields" [withLabel]="true"
