--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-edit-page/case-edit-page.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-edit-page/case-edit-page.html
@@ -47,16 +47,17 @@
       <ccd-case-edit-form id='caseEditForm' *ngIf="!currentPage.isMultiColumn()" [fields]="currentPage.getCol1Fields()"
                           [formGroup]="editForm.controls['data']" [caseFields]="caseFields"
                           [pageChangeSubject]="pageChangeSubject"
+                          [eventTrigger]="eventTrigger"
                           (valuesChanged)="applyValuesChanged($event)"></ccd-case-edit-form>
       <!-- two columns -->
       <div *ngIf="currentPage.isMultiColumn()" class="grid-row">
         <div class="column-two-thirds rightBorderSeparator">
           <ccd-case-edit-form id='caseEditForm1' [fields]="currentPage.getCol1Fields()"
-                              [formGroup]="editForm.controls['data']" [caseFields]="caseFields"></ccd-case-edit-form>
+                              [formGroup]="editForm.controls['data']" [caseFields]="caseFields" [eventTrigger]="eventTrigger"></ccd-case-edit-form>
         </div>
         <div class="column-one-third">
           <ccd-case-edit-form id='caseEditForm2' [fields]="currentPage.getCol2Fields()"
-                              [formGroup]="editForm.controls['data']" [caseFields]="caseFields"></ccd-case-edit-form>
+                              [formGroup]="editForm.controls['data']" [caseFields]="caseFields" [eventTrigger]="eventTrigger"></ccd-case-edit-form>
         </div>
       </div>
     </fieldset>
