--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-edit-submit/case-edit-submit.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-edit-submit/case-edit-submit.html
@@ -19,7 +19,7 @@
   <form class="check-your-answers" [formGroup]="editForm" (submit)="submit()">
     <ng-container *ngIf="checkYourAnswerFieldsToDisplayExists()">
 
-      <h2 class="heading-h2">{{pageTitle | rpxTranslate }}</h2>
+      <h2 class="heading-h2">{{pageTitle | rpxTranslate}}</h2>
       <span class="text-16" *ngIf="!caseEdit.isCaseFlagSubmission">{{'Check the information below carefully.' | rpxTranslate}}</span>
 
       <table class="form-table" aria-describedby="check your answers table">
@@ -86,13 +86,13 @@
         <legend style="display: none;"></legend>
         <div class="form-group">
           <label for="field-trigger-summary" class="form-label">
-            Event summary (optional)
-            <span class="form-hint">A few words describing the purpose of the event.</span>
+            {{'Event summary (optional)' | rpxTranslate}}
+            <span class="form-hint">{{'A few words describing the purpose of the event.' | rpxTranslate}}</span>
           </label>
           <input type="text" id="field-trigger-summary" class="form-control bottom-30 width-50" formControlName="summary" maxlength="1024">
         </div>
         <div class="form-group">
-          <label for="field-trigger-description" class="form-label">Event description (optional)</label>
+          <label for="field-trigger-description" class="form-label">{{'Event description (optional)' | rpxTranslate}}</label>
           <textarea id="field-trigger-description" class="form-control bottom-30 width-50" formControlName="description"
                     maxlength="65536"></textarea>
         </div>
