--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/linked-cases/write-linked-cases-field.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/linked-cases/write-linked-cases-field.component.html
@@ -2,23 +2,33 @@
   <div class="govuk-form-group" [ngSwitch]="linkedCasesPage">
     <ng-container *ngSwitchCase="linkedCasesPages.BEFORE_YOU_START">
       <ccd-linked-cases-before-you-start
-        (linkedCasesStateEmitter)="onLinkedCasesStateEmitted($event)"></ccd-linked-cases-before-you-start>
+        #journeyChild 
+        (linkedCasesStateEmitter)="onLinkedCasesStateEmitted($event)">
+      </ccd-linked-cases-before-you-start>
     </ng-container>
     <ng-container *ngSwitchCase="linkedCasesPages.NO_LINKED_CASES">
       <ccd-no-linked-cases
-        (linkedCasesStateEmitter)="onLinkedCasesStateEmitted($event)"></ccd-no-linked-cases>
+        #journeyChild 
+        (linkedCasesStateEmitter)="onLinkedCasesStateEmitted($event)">
+      </ccd-no-linked-cases>
     </ng-container>
     <ng-container *ngSwitchCase="linkedCasesPages.LINK_CASE">
       <ccd-link-cases
-        (linkedCasesStateEmitter)="onLinkedCasesStateEmitted($event)"></ccd-link-cases>
+        #journeyChild 
+        (linkedCasesStateEmitter)="onLinkedCasesStateEmitted($event)">
+      </ccd-link-cases>
     </ng-container>
     <ng-container *ngSwitchCase="linkedCasesPages.UNLINK_CASE">
       <ccd-unlink-cases
-        (linkedCasesStateEmitter)="onLinkedCasesStateEmitted($event)"></ccd-unlink-cases>
+        #journeyChild 
+        (linkedCasesStateEmitter)="onLinkedCasesStateEmitted($event)">
+      </ccd-unlink-cases>
     </ng-container>
     <ng-container *ngSwitchCase="linkedCasesPages.CHECK_YOUR_ANSWERS">
       <ccd-linked-cases-check-your-answers
-        (linkedCasesStateEmitter)="onLinkedCasesStateEmitted($event)"></ccd-linked-cases-check-your-answers>
+        #journeyChild 
+        (linkedCasesStateEmitter)="onLinkedCasesStateEmitted($event)">
+      </ccd-linked-cases-check-your-answers>
     </ng-container>
   </div>
 </div>
