--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-history/case-history.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-history/case-history.component.html
@@ -48,7 +48,7 @@
                   <ng-container [ngSwitch]="!(field | ccdIsCompound)">
                     <tr *ngSwitchCase="true">
                       <th id="case-viewer-label-header">
-                        <div class="case-viewer-label">{{field.label}}</div>
+                        <div class="case-viewer-label">{{field.label | rpxTranslate}}</div>
                       </th>
                       <td>
                         <ccd-field-read [caseField]="field" [caseReference]="caseHistory.case_id"></ccd-field-read>
