adding styling to the FormGroup to take bigger label

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/event-trigger/event-trigger.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/event-trigger/event-trigger.component.html
@@ -1,5 +1,5 @@
 <form *ngIf="triggers && triggers.length" class="event-trigger" (ngSubmit)="triggerSubmit()" [formGroup]="triggerForm">
-  <div class="form-group">
+  <div class="form-group" style="width: 350px !important;">
     <label class="form-label" for="next-step">{{'Next step' | rpxTranslate}}</label>
     <select class="form-control ccd-dropdown" id="next-step" (change)="triggerChange()" formControlName="trigger" [ngClass]="{
           'EventTrigger-empty': !triggerForm.value['trigger']
