return url to text without turning it into a link

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/dynamic-multi-select-list/write-dynamic-multi-select-list-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/dynamic-multi-select-list/write-dynamic-multi-select-list-field.html
@@ -15,7 +15,7 @@
         <input class="form-control" id="{{ createElementId(checkbox.code) }}" name="{{ id() }}" type="checkbox"
           [value]="checkbox.code" [checked]="isSelected(checkbox.code)" (change)="onCheckChange($event)">
         <label class="form-label" for="{{ createElementId(checkbox.code) }}">
-          <ccd-markdown [content]="checkbox.label"></ccd-markdown>
+          <ccd-markdown [content]="checkbox.label" [renderUrlToTextFeature]="false"></ccd-markdown>
         </label>
       </div>
 
