hide text, but make it accessibile

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-viewer/case-full-access-view/case-full-access-view.component.scss
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-viewer/case-full-access-view/case-full-access-view.component.scss
@@ -30,3 +30,8 @@ ccd-event-trigger {
 .markdown h3 {
   margin-bottom: 0px;
 }
+
+.hide-table-capion {
+  position: absolute;
+  visibility: hidden;
+}
