aria description added

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/complex/read-complex-field-table.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/complex/read-complex-field-table.html
@@ -1,6 +1,6 @@
 <div class="complex-panel">
   <dl class="complex-panel-title"><dt><span class="text-16">{{caseField.label | rpxTranslate}}</span></dt><dd></dd></dl>
-  <table id="complex" class="complex-panel-table">
+  <table id="complex" class="complex-panel-table" aria-describedby="complex field table">
     <tbody>
       <ng-container *ngFor="let field of caseField | ccdReadFieldsFilter:false :undefined :true :topLevelFormGroup: undefined :idPrefix">
         <ng-container *ngIf="(field | ccdIsCompound); else SimpleRow">
