Make accessibility change

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.html
@@ -5,7 +5,8 @@
       id="document-search"
       name="documentSearchFormControl"
       formControlName="documentSearchFormControl"
-      placeholder="Search by document name">
+      placeholder="Search by document name"
+      aria-label="Document search box">
   </div>
 </div>
 
