--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.html
@@ -6,7 +6,7 @@
       name="documentSearchFormControl"
       formControlName="documentSearchFormControl"
       placeholder="Search by document name"
-      aria-label="Document search box">
+      aria-label="Search by document name">
   </div>
 </div>
 
