--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/document/write-document-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/document/write-document-field.html
@@ -12,7 +12,12 @@
 
   <div style='position:relative'>
 
-    <div [id]="createElementId('fileInputWrapper')" (click)="fileSelectEvent()"></div>
+    <div
+      [id]="createElementId('fileInputWrapper')"
+      (click)="fileSelectEvent()"
+      (keyup)="handleKeyUp($event)">
+    </div>
+
     <input class="form-control bottom-30" [id]="id()" type="file" (keydown.Tab)="fileValidationsOnTab()" (change)="fileChangeEvent($event)"
            accept="{{caseField.field_type.regular_expression}}" #fileInput/>
   </div>
