--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/document/write-document-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/document/write-document-field.html
@@ -14,8 +14,7 @@
 
     <div
       [id]="createElementId('fileInputWrapper')"
-      (click)="fileSelectEvent()"
-      (keyup)="handleKeyUp($event)">
+      (click)="fileSelectEvent()">
     </div>
 
     <input class="form-control bottom-30" [id]="id()" type="file" (keydown.Tab)="fileValidationsOnTab()" (change)="fileChangeEvent($event)"
