fix sonarCode issue

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/document/write-document-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/document/write-document-field.html
@@ -14,7 +14,8 @@
 
     <div
       [id]="createElementId('fileInputWrapper')"
-      (click)="fileSelectEvent()">
+      (click)="fileSelectEvent()"
+      (keyup)="fileSelectEvent()">
     </div>
 
     <input class="form-control bottom-30" [id]="id()" type="file" (keydown.Tab)="fileValidationsOnTab()" (change)="fileChangeEvent($event)"
