--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/history/event-log/event-log-table.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/history/event-log/event-log-table.component.html
@@ -12,7 +12,8 @@
       (click)="select(event)"
       [ngClass]="{'EventLogTable-Selected': selected === event}"
       tabindex="0"
-      [attr.aria-label]="getAriaLabelforRow(event)">
+      [attr.aria-label]="getAriaLabelforRow(event)"
+      (keyup)="select(event)">
     <td>
       <ng-container [ngSwitch]="isPartOfCaseTimeline">
         <div id="case-timeline" *ngSwitchCase="true">
