PR review comments fix

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/case-file-view-field.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/case-file-view-field.component.html
@@ -46,7 +46,7 @@
                          [enableAnnotations]="true"
                          [enableRedactions]="true"
                          [height]="'94.5vh'"
-                         [enableICP]="isIcpEnabled(icpEnabled,icp_jurisdictions)">
+                         [enableICP]="isIcpEnabled()">
         </mv-media-viewer>
       </ng-container>
     </div>
