code update inline library change - ngx-md to ngx-markdown

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/markdown/markdown.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/markdown/markdown.html
@@ -1,1 +1,1 @@
-<div><markdown [sanitizeHtml]="false" class="markdown" [data]="content | ccdCaseReference | rpxTranslate"></markdown></div>
+<div><markdown class="markdown" [data]="content | ccdCaseReference | rpxTranslate"></markdown></div>
