added auto default selection to select element. fixed error msg display

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-viewer/case-full-access-view/case-full-access-view.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-viewer/case-full-access-view/case-full-access-view.component.html
@@ -41,7 +41,9 @@
   </div>
   <div *ngIf="hasEventSelector" class="column-one-half">
     <ccd-event-trigger [isDisabled]="isTriggerButtonDisabled()" [triggers]="caseDetails.triggers"
-                       [triggerText]="triggerText" (onTriggerChange)="clearErrorsAndWarnings()"
+                       [triggerText]="triggerText"
+                       [eventId]="eventId"
+                       (onTriggerChange)="clearErrorsAndWarnings()"
                        (onTriggerSubmit)="applyTrigger($event)"></ccd-event-trigger>
   </div>
 </div>
