--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/event-trigger/event-trigger.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/event-trigger/event-trigger.component.html
@@ -3,9 +3,9 @@
     <label class="form-label" for="next-step">{{'Next step' | rpxTranslate}}</label>
     <select class="form-control ccd-dropdown" id="next-step" (change)="triggerChange()" formControlName="trigger" [ngClass]="{
           'EventTrigger-empty': !triggerForm.value['trigger']
-        }">
+        }" [compareWith]="compareFn">
       <option *ngIf="1 !== triggers.length" value="" data-default>{{'Select action' | rpxTranslate}}</option>
-      <option *ngFor="let trigger of triggers" [ngValue]="trigger" [title]="trigger.description">{{trigger.name | rpxTranslate}}</option>
+      <option *ngFor="let trigger of triggers" [ngValue]="trigger"  [title]="trigger.description">{{trigger.name | rpxTranslate}}</option>
     </select>
   </div>
   <button [disabled]="isButtonDisabled()" type="submit" class="button">{{triggerText | rpxTranslate}}</button>
