Activated the enableICP option for case File View (#1721)
* activated the enableICP option

* enableicp configuration reworked

* removed  unneeded reference

* version number amended

* function name change

* mock config  amended

* unit test failure fix

* function return type added

* Unit test failure fix

* PR review comments fix

* function change and unit tests update

* removed unit test restriction

* linting

* more unit test added

* refactored unit test for ICP

* version number changed

* version updated

---------

Co-authored-by: RiteshHMCTS <74713687+RiteshHMCTS@users.noreply.github.com>
Co-authored-by: Ritesh Dsouza <ritesh.dsouza@HMCTS.net>

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/case-file-view-field.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/case-file-view-field.component.html
@@ -45,7 +45,8 @@
                          [contentType]="currentDocument.content_type"
                          [enableAnnotations]="true"
                          [enableRedactions]="true"
-                         [height]="'94.5vh'">
+                         [height]="'94.5vh'"
+                         [enableICP]="isIcpEnabled()">
         </mv-media-viewer>
       </ng-container>
     </div>
