calendar background fix

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/datetime-picker/datetime-picker.component.scss
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/datetime-picker/datetime-picker.component.scss
@@ -101,6 +101,7 @@ Details inside it are for the actual component first shown on page */
     border: 1px solid black;
     border-radius: 0;
     max-width: 295px;
+    background: #fff;
 
     .mat-calendar-table {
       width: calc(100% - 1px);
